--- a/TriadApp/templates/TriadApp/superadmin/super_admin.html
+++ b/TriadApp/templates/TriadApp/superadmin/super_admin.html
@@ -29,7 +29,7 @@
                             <a href="{% url 'register_admin' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Admin Management</a>
                         </li>
                         <li>
-                            <a href="#" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Reports</a>
+                            <a href="{% url 'super_admin_profile' %}" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Profile</a>
                         </li>
                         <li>
                             <a href="#" class="block py-2.5 px-6 text-lg hover:bg-gray-700">Settings</a>
