--- a/TriadApp/templates/TriadApp/forgot_password.html
+++ b/TriadApp/templates/TriadApp/forgot_password.html
@@ -7,6 +7,12 @@
     <title>Forgot Password - TriadApp</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+    <style>
+        * {
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 </head>
 <body class="bg-[#E8E3D7] flex flex-col min-h-screen">
     {% if messages %}
