--- a/TriadApp/templates/TriadApp/index.html
+++ b/TriadApp/templates/TriadApp/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to I/O Food Hub</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+    <style>
+        * {
+            font-family: 'Poppins', sans-serif;
+        }
 </head>
 <body class="bg-gradient-to-br from-blue-100 to-white min-h-screen">
     <div class="flex flex-col items-center justify-center min-h-screen p-4">
