--- a/TriadApp/templates/TriadApp/superadmin/super_admin_profile.html
+++ b/TriadApp/templates/TriadApp/superadmin/super_admin_profile.html
@@ -4,6 +4,12 @@
 
 {% block extra_head %}
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+<style>
+    * {
+        font-family: 'Poppins', sans-serif;
+    }
+</style>
 {% endblock %}
 
 {% block content %}
