--- a/TriadApp/templates/TriadApp/index.html
+++ b/TriadApp/templates/TriadApp/index.html
@@ -10,6 +10,7 @@
         * {
             font-family: 'Poppins', sans-serif;
         }
+    </style>
 </head>
 <body class="bg-gradient-to-br from-blue-100 to-white min-h-screen">
     <div class="flex flex-col items-center justify-center min-h-screen p-4">
