--- a/TriadApp/templates/TriadApp/login.html
+++ b/TriadApp/templates/TriadApp/login.html
@@ -30,7 +30,7 @@
     <!-- Navbar -->
     <nav class="bg-white border-b-2 border-gray-300 p-4 flex justify-between items-center shadow">
         <div class="flex items-center space-x-3">
-            <img src="logo.png" alt="Logo" class="h-12"> <!-- Replace with your logo -->
+            <img src="{% static 'images/triad.jpg' %}" alt="Logo" class="h-12"> <!-- Replace with your logo -->
             <h1 class="text-3xl font-bold text-gray-800"></h1>
         </div>
         <div>
